--- a/src/app/pages/panel/settings/settings.component.html
+++ b/src/app/pages/panel/settings/settings.component.html
@@ -1,8 +1,5 @@
 <div class="flex flex-wrap">
-  <div class="w-full lg:w-8/12 px-4">
-    <app-card-settings></app-card-settings>
-  </div>
-  <div class="w-full lg:w-4/12 px-4">
-    <app-card-profile></app-card-profile>
+  <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+    <app-card-page-visits></app-card-page-visits>
   </div>
 </div>
