--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
       class="md:block text-left md:pb-2 text-blueGray-600 mr-0 inline-block whitespace-nowrap text-sm uppercase font-bold p-4 px-0"
     >
       <span class="block sm:hidden"> Tailwind Angular </span>
-      <span class="hidden sm:block"> Notus Angular </span>
+      <span class="hidden sm:block"> Sistema de gestión </span>
     </a>
     <!-- User -->
     <ul class="md:hidden items-center flex flex-wrap list-none">
@@ -71,12 +71,6 @@
 
       <!-- Divider -->
       <hr class="my-4 md:min-w-full" />
-      <!-- Heading -->
-      <h6
-        class="md:min-w-full text-blueGray-500 text-xs uppercase font-bold block pt-1 pb-4 no-underline"
-      >
-        Admin Layout Pages
-      </h6>
       <!-- Navigation -->
 
       <ul class="md:flex-col md:min-w-full flex flex-col list-none">
@@ -88,7 +82,7 @@
             #adminDashboard="routerLinkActive"
             [ngClass]="
               adminDashboard.isActive
-                ? 'text-red-600 hover:text-red-700'
+                ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
@@ -98,7 +92,7 @@
                 adminDashboard.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Dashboard
+            Bienvenida
           </a>
         </li>
 
@@ -110,7 +104,7 @@
             #adminSettings="routerLinkActive"
             [ngClass]="
               adminSettings.isActive
-                ? 'text-red-600 hover:text-red-700'
+                ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
@@ -120,7 +114,7 @@
                 adminSettings.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Settings
+            Usuarios
           </a>
         </li>
 
@@ -132,7 +126,7 @@
             #adminTables="routerLinkActive"
             [ngClass]="
               adminTables.isActive
-                ? 'text-red-600 hover:text-red-700'
+                ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
@@ -154,7 +148,7 @@
             #adminMaps="routerLinkActive"
             [ngClass]="
               adminMaps.isActive
-                ? 'text-red-600 hover:text-red-700'
+                ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
@@ -176,7 +170,7 @@
             #adminMaps="routerLinkActive"
             [ngClass]="
               adminMaps.isActive
-                ? 'text-red-600 hover:text-red-700'
+                ? 'text-purple-900 hover:text-purple-900'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
           >
