--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -186,7 +186,7 @@
                 adminMaps.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Votantes
+            Beneficiario
           </a>
         </li>
 
