--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -164,7 +164,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['Votantes']"
+            [routerLink]="['Beneficiario']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminMaps="routerLinkActive"
