--- a/src/shared/components/modal/modal.component.html
+++ b/src/shared/components/modal/modal.component.html
@@ -2,7 +2,7 @@
 
 <div class="flex justify-between">
   <div>
-    <button (click)="openModal()" class="min-w-140-px bg-red-600 text-white py-2 rounded-md hover:bg-red-950">Agregar usuario</button>
+    <button (click)="openModal()" class="min-w-140-px bg-purple-900 text-white py-2 rounded-md hover:bg-red-950">Agregar usuario</button>
   </div>
   <div>
   </div>
@@ -157,7 +157,7 @@
               </div>
             </div>
             <hr class="mt-6 border-b-1 border-blueGray-300" />
-            <button type="submit" class="w-full bg-red-600 text-white py-2 rounded-md hover:bg-red-950">Guardar</button>
+            <button type="submit" class="w-full bg-purple-900 text-white py-2 rounded-md hover:bg-purple-950">Guardar</button>
 
           </form>
         </div>
