--- a/src/shared/components/cards/card-page-visits/card-page-visits.component.html
+++ b/src/shared/components/cards/card-page-visits/card-page-visits.component.html
@@ -3,11 +3,11 @@
   <div class="rounded-t mb-0 px-4 py-3 border-0">
 
     <div class="flex flex-wrap items-center">
-      <div class="relative w-full px-4 max-w-full flex-grow flex-1">
+      <div class="relative w-full px-4  flex-grow flex-1">
         <!-- Button trigger modal -->
         <app-modal></app-modal><br><br>
+      </div>
     </div>
-
   </div>
   <div class="block w-full overflow-x-auto">
     <!-- Projects table -->
@@ -66,8 +66,36 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
-            24
+            carreto154@gmial.com
           </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >
+            Administrador
+          </td>
+          <td
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+          >
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M4 7l16 0" />
+              <path d="M10 11l0 6" />
+              <path d="M14 11l0 6" />
+              <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
+              <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
+            </svg>
+          </button>
+          <button class="ml-4">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
+              <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
+              <path d="M16 5l3 3" />
+            </svg>
+          </button>
+          </td>
+
         </tr>
         <tr>
           <th
@@ -89,7 +117,7 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="fas fa-arrow-down text-orange-500 mr-4"></i>
-            23
+            jennyjacqueline@gmial.com
           </td>
 
         </tr>
@@ -113,7 +141,7 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="fas fa-arrow-down text-orange-500 mr-4"></i>
-            24
+            gabrielruiz@gmial.com
           </td>
         </tr>
         <tr>
@@ -136,7 +164,7 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
-            24
+            rubymontes@gmial.com
           </td>
         </tr>
         <tr>
@@ -159,7 +187,7 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="fas fa-arrow-down text-red-500 mr-4"></i>
-            20
+            hectorflores@gmial.com
           </td>
         </tr>
       </tbody>
