--- a/src/shared/components/cards/card-line-chart/card-line-chart.component.html
+++ b/src/shared/components/cards/card-line-chart/card-line-chart.component.html
@@ -1,4 +1,4 @@
-<div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-slate-500" style="background: url('https://image.slidesdocs.com/responsive-images/background/coffee-wooden-table-powerpoint-background_e07a7b9141__960_540.jpg') center center / cover no-repeat; background-size: cover;">
+<div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-slate-500" style="background: url('https://img.freepik.com/foto-gratis/fondo-madera_24972-623.jpg') center center / cover no-repeat; background-size: cover;">
   <div class="p-4 flex-auto">
     <!-- Chart -->
     <div class="relative" style="height: 500px; z-index: -1;">
