--- a/src/app/pages/panel/Beneficiario/beneficiario.component.html
+++ b/src/app/pages/panel/Beneficiario/beneficiario.component.html
@@ -1,4 +1,11 @@
 <div class="flex flex-wrap">
+  <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+    <app-card-social-traffic></app-card-social-traffic>
+
+  </div>
+</div>
+
+<div class="flex flex-wrap">
   <div class="w-full px-4">
     <div
       class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded"
@@ -256,7 +263,7 @@
 
             <input
               id="searchInput"
-              class="controls"
+              class="controls custom-input"
               type="text"
               placeholder="Enter a location"
             />
