--- a/src/shared/components/admin-navbar/admin-navbar.component.html
+++ b/src/shared/components/admin-navbar/admin-navbar.component.html
@@ -20,11 +20,7 @@
           class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
           ><i class="fas fa-search"></i
         ></span>
-        <input
-          type="text"
-          placeholder="Search here..."
-          class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow outline-none focus:outline-none focus:ring w-full pl-10"
-        />
+            <p class="text-white">Cristia Carreto </p>
       </div>
     </form>
     <!-- User -->
