--- a/src/shared/components/modal-beneficiario/modal-beneficiario.component.html
+++ b/src/shared/components/modal-beneficiario/modal-beneficiario.component.html
@@ -190,7 +190,13 @@
               </div>
 
             </div>
-            <button type="submit" class="justify-center w-20 bg-purple-900 text-white py-2 rounded-md hover:bg-red-950">Guardar</button>
+            <div class="flex justify-between">
+              <div></div>
+              <div></div>
+              <div>
+                <button type="submit" class="justify-center w-20 bg-purple-900 text-white py-2 rounded-md hover:bg-red-950">Guardar</button>
+              </div>
+            </div>
           </form>
         </div>
 
