--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -118,7 +118,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['tables']"
+            [routerLink]="['areas']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminTables="routerLinkActive"
@@ -134,9 +134,10 @@
                 adminTables.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
-            Tables
+            Áreas de adscripción
           </a>
         </li>
+
 
         <li class="items-center">
           <a
