--- a/src/shared/components/modal/modal.component.html
+++ b/src/shared/components/modal/modal.component.html
@@ -157,15 +157,29 @@
                   >
                     Rol
                   </label>
-                  <select id="roles" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    <option selected>Selecciona un rol</option>
+                  <select id="rol"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    <option *ngFor="let rol of roles" [value]="rol">Director</option>
                     <option value="administrador">Administrador</option>
-                    <option value="operador">Operador</option>
                   </select><br>
+                  <div>
+                    <label for="">
+                      <select id="segundoSelect" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                        <option selected>Selecciona una área de adscripción</option>
+                        <option >Area1</option>
+                        <option value="administrador">Area 2</option>
+                      </select>
+                    </label>
+                  </div>
                 </div>
               </div>
             </div>
-            <button type="submit" class="justify-center w-20 bg-purple-900 text-white py-2 rounded-md hover:bg-red-950">Guardar</button>
+            <div class="flex justify-between">
+              <div></div>
+              <div></div>
+              <div>
+                <button type="submit" class="justify-center w-20 bg-purple-900 text-white py-2 rounded-md hover:bg-red-950">Guardar</button>
+              </div>
+            </div>
           </form>
         </div>
 
